# PlutoSystem

./: .gitignore  Makefile  README.md  package-lock.json  package.json
backend/pluto/: .coverage  .env  .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  pytest.ini
backend/pluto/_internal/config/: config.py  error.py
backend/pluto/_internal/log/: log.py
backend/pluto/_internal/server/: server.py
backend/pluto/package/: requirements.txt
backend/pluto/package/Flask-2.3.1.dist-info/: RECORD
backend/pluto/package/Werkzeug-2.3.2.dist-info/: RECORD
backend/pluto/package/psycopg2-2.9.6.dist-info/: RECORD
backend/pluto/pluto/: main.py
backend/pluto/pluto/_internal/adapters/: expense_service.py  income_service.py  storemgr.py  user_service.py
backend/pluto/pluto/_internal/config/: config.py
backend/pluto/pluto/_internal/dash/: utils.py
backend/pluto/pluto/_internal/domain/model/: expense.py  income.py  user.py
backend/pluto/pluto/_internal/domain/ports/: database.py  (+3 more)
backend/pluto/pluto/_internal/server/: flask_server.py  server.py  utils.py
backend/pluto/pluto/_internal/utils/: encoding.py  id.py
backend/pluto/tests/: conftest.py
backend/pluto/tests/_internal/: mocks.py
backend/pluto/tests/_internal/adapters/: test_expense_service.py  test_income_service.py  test_storemgr.py  test_storemgr_integ.py
backend/pluto/tests/_internal/config/: test_config.py
backend/pluto/tests/_internal/dash/: test_dash_utils.py
backend/pluto/tests/_internal/server/: test_flask_server_integr.py
backend/pluto/tests/_internal/storemgr/: test_storemgr.py
(+53 files in other folders)
